--- a/_example/layouts/layout2.tmpl
+++ b/_example/layouts/layout2.tmpl
@@ -1,7 +1,7 @@
 [This is layout2]
 
-Header: {{template "header" .}}
+Header: {{template "partials/header.tmpl" .}}
 
 Content: {{template "content" .}}
 
-Footer: {{template "footer" .}}
+Footer: {{template "partials/footer.tmpl" .}}
